cookie-x-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookie-x-app
  labels:
    app: cookiex-app
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    app: cookiex-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookie-x-app
  labels:
    app: cookiex-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookiex-app
  template:
    metadata:
      labels:
        app: cookiex-app
    spec:
      # serviceAccountName: bookinfo-details
      containers:
      - name: cookiex-app-c1
        image: cookie-x-poc_cookiex_app:latest
        command:
          - /bin/sh
        args:
          - -c
          - /app/main
        workingDir: /app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
      #   volumeMounts:
      #   - mountPath: /app
      #     name: vol-work
      # volumes:
      # - name: vol-work
      #   hostPath:
      #     path: /home/andrelima/REPOS/ssorouter/token_exchange_app
      #     type: DirectoryOrCreate
---
